spa/overlays/stage/spa-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.alb.yc.io/subnets: e9b98k3hqkb4fkcsu7hs
    ingress.alb.yc.io/external-ipv4-address: 51.250.3.196
    ingress.alb.yc.io/group-name: ttm
spec:
  tls:
    - hosts:
        - stage.my.ttplatform.ru
      secretName: yc-certmgr-cert-id-fpqsn9gl2vrb7s260bcc
  rules:
    - host: stage.my.ttplatform.ru
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: spa
                port:
                  number: 80
